mudanças de limpeza de codigo